--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hapi": "^17.6.0"
+    "hapi": "^17.6.0",
+    "inert": "^5.1.0",
+    "lout": "^11.1.0",
+    "mongodb": "^3.1.8",
+    "swapi-node": "^0.4.3",
+    "vision": "^5.4.0"
   }
 }
